# DocVec

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
scripts/: Start-DocVec-Native.cmd  Start-DocVec.cmd  Start-DocVec.ps1  Stop-DocVec.cmd  Stop-DocVec.ps1
src-ui/: index.html  package-lock.json  package.json
src-ui/src/: App.tsx  api.ts  styles.css
src-ui/src-tauri/: Cargo.toml  tauri.conf.json
src-ui/src-tauri/capabilities/: default.json
src-ui/src-tauri/icons/: icon.icns
src-ui/src-tauri/src/: lib.rs  main.rs
src/docvec/: app_api.py  auto_scan.py  chunking.py  cli.py  config.py  crawler.py  embeddings.py  fingerprints.py  indexer.py  logging.py  mcp_server.py  models.py  paths.py  runtime.py  search.py  vectors.py
src/docvec/extractors/: __init__.py  codex.py  documents.py  hermes.py  text.py
src/docvec/storage/: __init__.py  db.py  schema.sql
