[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "docvec"
version = "0.1.0"
description = "Local semantic file search for Windows files, projects, and AI sessions."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.26",
  "numpy>=1.26",
  "pydantic>=2.7",
  "requests>=2.32",
  "rich>=13.7",
  "typer>=0.12",
  "turbovec>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
docvec = "docvec.cli:app"
docvec-mcp = "docvec.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docvec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
