[package]
name = "docvec-desktop"
version = "0.1.0"
description = "DocVec desktop shell"
authors = ["DocVec"]
edition = "2021"

[lib]
name = "docvec_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
